Release: Prep
make things better for release